style: filtering checkboxes now no longer show a scrollbar if content is not larger than parent element

--- a/client/src/app/network-menu/network-menu.component.css
+++ b/client/src/app/network-menu/network-menu.component.css
@@ -29,6 +29,10 @@ hr {
   list-style: none;
 }
 
+.mat-checkbox {
+  overflow: hidden;
+}
+
 .wrapping {
   max-height: 50vh;
   overflow: auto;
